--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -19,6 +19,6 @@
 	},
 	"cordova": {},
 	"server": {
-		"url": "https://piano-test-26f1c.web.app/home"
+		"url": "https://piano-test-26f1c.web.app"
 	 }
 }
